2022-01-27  Jose E. Marchesi  <jemarch@gnu.org>

	* NEWS: Set date and version for 2.0 news.
	* configure.ac: Change version number to 2.0.
	* doc/gendocs_template: Adapt to 2.0.

2022-01-27  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pvm.jitter (iogetb): Mark as `non-relocatable` because
	of / and %.
	(formati): Likewise.
	(formatiu): Likewise.
	(formatl): Likewise.
	(formatlu): Likewise.
	(divi): Likewise.
	(diviu): Likewise.
	(divl): Likewise.
	(divlu): Likewise.
	(modi): Likewise.
	(modiu): Likewise.
	(modl): Likewise.
	(modlu): Likewise.
	* etc/pvm-wraps-static-whitelist: Update.

2022-01-27  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pvm.jitter (wrapped-functions): Add missing functions.
	(wrapped-globals): Add `libpoke_term_if`.
	(PVM_FORMATI): s/assert/pvm_assert/.
	(PVM_FORMATL): Likewise.
	(late-c): Define new function wrappers.
	(exit): s/assert/pvm_assert/.
	(call): Likewise.
	(eqs): s/STREQ/pvm_strcmp/.
	(nes): s/STRNEQ/pvm_strcmp/.
	(lts): s/strcmp/pvm_strcmp/.
	(gts): Likewise.
	(ges): Likewise.
	(les): Likewise.
	(sconc): s/${F}/pvm_${F}/.
	(strset): Likewise.
	(muls): Likewise.
	(asettb): Likewise.
	(strace): s/assert/pvm_assert/.
	(sleep): s/nanosleep/pvm_nanosleep/.
	* etc/pvm-wraps-static-whitelist: Update.

2022-01-27  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pvm.jitter (PVM_RAISE_DIRECT): Use
	`PVM_STATE_RUNTIME_FIELD` accessor.
	(PVM_CALL): Likewise.
	(return): Likewise.
	(pushf): Likewise.
	(popf): Likewise.
	(pushvar): Likewise.
	(pushtopvar): Likewise.
	(popvar): Likewise.
	(regvar): Likewise.
	(pec): Likewise.
	(pushhi): Likewise.
	(pushlo): Likewise.
	(write): Likewise.
	(peekdi): Likewise.
	(peekdiu): Likewise.
	(peekdl): Likewise.
	(peekdlu): Likewise.
	(pokedi): Likewise.
	(pokediu): Likewise.
	(pokedl): Likewise.
	(pokedlu): Likewise.
	(pushe): Likewise.

2022-01-27  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pvm.jitter (wrapped-globals): Add pvm_literal_*.