@@ -12,6 +12,7 @@ pvm_literal_invalid_class
 pvm_literal_eindex
 pvm_literal_notmappable
 pvm_literal_newline
+pvm_exception_names
 pvm_memcpy
 pvm_strlen
 pvm_strcpy
